fix: gap under landing page and button border

--- a/src/style.css
+++ b/src/style.css
@@ -21,10 +21,10 @@
   cursor: none;
 }
 
-/* body {
+html, body, #root, #root>div {
   width: 100%;
-  height: 100%;
-} */
+  height: 100% !important;
+}
 
 /* .table {
   width: 500px;
